added the section containing available books to purchase

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -37,5 +37,69 @@
             </div>
         </div>
     </section>
+    <section class="books">
+        <div class="books-contain row">
+            <div class="book d-flex flex-column col-md-4 col-sm-6">
+                <img src="books/images/Head_First.jpg" alt="" style="align-self:center;">
+                <span>Head First Java</span>
+                <span>Rs. 500</span>
+                <div class="buy-check d-flex justify-content-between">
+                    <button>Buy Now</button>
+                    <button>Add to Cart</button>
+                </div>
+                <a href="">More Info&nbsp<i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="book d-flex flex-column col-md-4 col-sm-6">
+                <img src="books/images/Head_First.jpg" alt="" style="align-self:center;">
+                <span>Head First Java</span>
+                <span>Rs. 500</span>
+                <div class="buy-check d-flex justify-content-between">
+                    <button>Buy Now</button>
+                    <button>Add to Cart</button>
+                </div>
+                <a href="">More Info&nbsp<i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="book d-flex flex-column col-md-4 col-sm-6">
+                <img src="books/images/Head_First.jpg" alt=""style="align-self:center;">
+                <span>Head First Java</span>
+                <span>Rs. 500</span>
+                <div class="buy-check d-flex justify-content-between">
+                    <button>Buy Now</button>
+                    <button>Add to Cart</button>
+                </div>
+                <a href="">More Info&nbsp<i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="book d-flex flex-column col-md-4 col-sm-6">
+                <img src="books/images/Head_First.jpg" alt="" style="align-self:center;">
+                <span>Head First Java</span>
+                <span>Rs. 500</span>
+                <div class="buy-check d-flex justify-content-between">
+                    <button>Buy Now</button>
+                    <button>Add to Cart</button>
+                </div>
+                <a href="">More Info&nbsp<i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="book d-flex flex-column col-md-4 col-sm-6">
+                <img src="books/images/Head_First.jpg" alt="" style="align-self:center;">
+                <span>Head First Java</span>
+                <span>Rs. 500</span>
+                <div class="buy-check d-flex justify-content-between">
+                    <button>Buy Now</button>
+                    <button>Add to Cart</button>
+                </div>
+                <a href="">More Info&nbsp<i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="book d-flex flex-column col-md-4 col-sm-6">
+                <img src="books/images/Head_First.jpg" alt="" style="align-self:center;">
+                <span>Head First Java</span>
+                <span>Rs. 500</span>
+                <div class="buy-check d-flex justify-content-between">
+                    <button>Buy Now</button>
+                    <button>Add to Cart</button>
+                </div>
+                <a href="">More Info&nbsp<i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
