--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,9 +6,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="assets/index.css">
+    <link rel="stylesheet" href="assets/css/index.css">
     <title>E_BookStore</title>
 </head>
+<script src="assets/js/index.js"></script>
 <body style="margin: 0;">
     <section class="nav position-relative">
         <div class="d-md-flex d-none" style="width: 100%;">
@@ -38,10 +39,28 @@
                 </div>
             </div>
         </div>
-        <div class="small-nav d-flex d-md-none justify-content-between">
+        <div class="small-nav d-flex d-md-none justify-content-between position-relative">
             <h2>E_BookStore</h2>
-            <div class="menu">
+            <div class="menu" onclick="appearProfileCard(1)">
                 <i class="fa-solid fa-bars"></i>
+            </div>
+            <div id="menu-content" class="menu-content position-absolute">
+                <p><i class="fa-solid fa-x" onclick="appearProfileCard(2)"></i></p>
+                <div class="profile d-flex justify-content-between">
+                    <i class="fa-solid fa-user"></i>
+                    <div class="profile-info d-flex flex-column justify-content-center">
+                        <span>Ramandeep</span>
+                        <span>7678118285</span>
+                    </div>
+                </div>
+                <div class="cart-items d-flex justify-content-between">
+                    <a href="">View Cart</a>
+                    <span>0</span>
+                </div>
+                <div class="login-logout d-flex justify-content-center">
+                    <a href="">Signup</a>
+                    <button>Login</button>
+                </div>
             </div>
         </div>
     </section>
