--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -70,59 +70,13 @@
                 <img src="books/images/Head_First.jpg" alt="" style="align-self:center;">
                 <span>Head First Java</span>
                 <span>Rs. 500</span>
-                <div class="buy-check d-flex justify-content-between">
-                    <button>Buy Now</button>
-                    <button>Add to Cart</button>
-                </div>
-                <a href="">More Info&nbsp<i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-            <div class="book d-flex flex-column col-md-4 col-sm-6">
-                <img src="books/images/Head_First.jpg" alt="" style="align-self:center;">
-                <span>Head First Java</span>
-                <span>Rs. 500</span>
-                <div class="buy-check d-flex justify-content-between">
-                    <button>Buy Now</button>
-                    <button>Add to Cart</button>
-                </div>
-                <a href="">More Info&nbsp<i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-            <div class="book d-flex flex-column col-md-4 col-sm-6">
-                <img src="books/images/Head_First.jpg" alt=""style="align-self:center;">
-                <span>Head First Java</span>
-                <span>Rs. 500</span>
-                <div class="buy-check d-flex justify-content-between">
-                    <button>Buy Now</button>
-                    <button>Add to Cart</button>
-                </div>
-                <a href="">More Info&nbsp<i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-            <div class="book d-flex flex-column col-md-4 col-sm-6">
-                <img src="books/images/Head_First.jpg" alt="" style="align-self:center;">
-                <span>Head First Java</span>
-                <span>Rs. 500</span>
-                <div class="buy-check d-flex justify-content-between">
-                    <button>Buy Now</button>
-                    <button>Add to Cart</button>
-                </div>
-                <a href="">More Info&nbsp<i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-            <div class="book d-flex flex-column col-md-4 col-sm-6">
-                <img src="books/images/Head_First.jpg" alt="" style="align-self:center;">
-                <span>Head First Java</span>
-                <span>Rs. 500</span>
-                <div class="buy-check d-flex justify-content-between">
-                    <button>Buy Now</button>
-                    <button>Add to Cart</button>
-                </div>
-                <a href="">More Info&nbsp<i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-            <div class="book d-flex flex-column col-md-4 col-sm-6">
-                <img src="books/images/Head_First.jpg" alt="" style="align-self:center;">
-                <span>Head First Java</span>
-                <span>Rs. 500</span>
-                <div class="buy-check d-flex justify-content-between">
-                    <button>Buy Now</button>
-                    <button>Add to Cart</button>
+                <div class="buy-check row">
+                    <div class="book-button col-md-6 col-sm-12 col-6">
+                        <button>Buy Now</button>
+                    </div>
+                    <div class="book-button col-md-6 col-sm-12 col-6">
+                        <button>Add to Cart</button>
+                    </div>
                 </div>
                 <a href="">More Info&nbsp<i class="fa-solid fa-arrow-right"></i></a>
             </div>
