--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,12 +30,12 @@
             </div>
             <div class="profile-nav d-flex justify-content-end">
                 <div class="credentials d-flex flex-column justify-content-center">
-                    <span>Signup</span>  
+                    <a href="">Signup</a>  
                 </div>
                 <div class="credentials d-flex flex-column justify-content-center">
-                    <span style="background: #000080; 
+                    <a style="background: #000080; 
                     color: white;
-                    border-radius: 1vw;">Login</span>
+                    border-radius: 1vw;" href="login.html">Login</a>
                 </div>
             </div>
         </div>
