introduced new way to go through all the types of books

--- a/WebContent/assets/presentation/booksCarousel.html
+++ b/WebContent/assets/presentation/booksCarousel.html
@@ -1,4 +1,4 @@
-<section class="container" style="padding: 5vw; height: 30vw;">
+<section id="book-carousel" class="container" style="padding: 5vw; height: 30vw;">
     <section class="row justify-content-center position-relative" style="align-items: center; height: -webkit-fill-available;">
         <div id="active-1" class="b-disp col-4" style="display: flex;
         position: absolute;
@@ -55,7 +55,7 @@
         </div>
     </section> 
 </section>
-<section class="slide d-flex justify-content-center">
+<section id="carousel-slide" class="slide">
     <div id="active-slide-1" onclick="activeBlock(1)" class="active-slide" style="background-color: #0000806e;"></div>
     <div id="active-slide-2" onclick="activeBlock(2)" class="active-slide" style="background-color: #000080;"></div>
     <div id="active-slide-3" onclick="activeBlock(3)" class="active-slide" style="background-color: #0000806e;"></div>
