whole new way of admin control over the site is successfully developed

--- a/WebContent/assets/admin-presentation/addBook.html
+++ b/WebContent/assets/admin-presentation/addBook.html
@@ -2,7 +2,7 @@
     <h1>Add Book</h1>
 </div>
 <div class="add-book-form">
-    <form action="" method="get">
+    <form action="../../addBook" method="post" enctype="multipart/form-data">
         <div class="d-flex">
             <div class="d-flex justify-content-center form-input position-relative col-6">
                 <span class="position-absolute" id="name1">
