--- a/WebContent/assets/admin-presentation/adminNav.html
+++ b/WebContent/assets/admin-presentation/adminNav.html
@@ -5,7 +5,7 @@
     <span>ADMIN</span>
     <span class="position-relative" style="cursor: pointer;"
     onclick="showLogout()"><i class="fa-solid fa-power-off"></i>
-        <a id="logout-button" class="position-absolute">Logout</a>
+        <a href="adminLogout.jsp" id="logout-button" class="position-absolute">Logout</a>
     </span>
 </div>
 <div class="admin-task">
