introduced new view for carousel for advertising three books, this is only front-end

--- a/WebContent/assets/presentation/test.html
+++ b/WebContent/assets/presentation/test.html
@@ -6,8 +6,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="assets/css/booksCarousel.css">
-    <script src="assets/js/booksCarousel.js"></script>
+    <link rel="stylesheet" href="../css/booksCarousel.css">
+    <script src="../js/booksCarousel.js"></script>
 </head>
 <body>
     <section class="carousel">
@@ -22,7 +22,7 @@
             </section>
             <section class="slide-item-img d-flex flex-column justify-content-center col-6">
                 <div class="item-img">
-                    <img src="books/images/Head_First.jpg" alt="">
+                    <img src="../../books/images/Head_First.jpg" alt="">
                 </div>
                 <div class="item-price">
                     <span>Rs. 500/-</span>
@@ -40,7 +40,7 @@
             </section>
             <section class="slide-item-img d-flex flex-column justify-content-center col-6">
                 <div class="item-img">
-                    <img src="books/images/Fluent C.jpeg" alt="">
+                    <img src="../../books/images/Fluent C.jpeg" alt="">
                 </div>
                 <div class="item-price">
                     <span>Rs. 654/-</span>
@@ -58,7 +58,7 @@
             </section>
             <section class="slide-item-img d-flex flex-column justify-content-center col-6">
                 <div class="item-img">
-                    <img src="books/images/let_us_python.jpg" alt="">
+                    <img src="../../books/images/let_us_python.jpg" alt="">
                 </div>
                 <div class="item-price">
                     <span>Rs. 4544/-</span>
